Fix overflow bug on homepage after visiting social media works

--- a/components/Home Page/style.css
+++ b/components/Home Page/style.css
@@ -1,3 +1,7 @@
+#hero-section .pin-spacer {
+  max-height: fit-content;
+}
+
 #hero-content-wrapper {
   max-width: 100vw;
 }
